# tello_platform

./: CMakeLists.txt  README.md
config/: control_modes.yaml
include/: tello_platform.hpp
launch/: tello_platform.launch.py
src/: singleTheated_executor.cpp  tello_platform.cpp  tello_platform_node.cpp
tello/: CMakeLists.txt
tello/include/: socket_udp.hpp
tello/include/tello/: tello.hpp
tello/src/: socket_udp.cpp  tello.cpp
tello/test/: tello_test.cpp
tello_connection/: CMakeLists.txt
tello_connection/include/: socketudp.hpp  tello.hpp
tello_connection/src/: clientUdp.cpp  client_prueba.cpp  socketUdp.cpp  tello.cpp
tello_platform/: CMakeLists.txt
tello_platform/include/: tello_platform.hpp
tello_platform/src/: tello_platform.cpp
tello_platform/tello_connection/include/: socketudp.hpp
tello_platform/tello_connection/src/: clientUdp.cpp  tello.cpp
tello_platform/test/: main.py
